--- a/Lyceum/requirements.txt
+++ b/Lyceum/requirements.txt
@@ -10,6 +10,7 @@ channels-redis==4.1.0
 constantly==15.1.0
 cryptography==41.0.1
 daphne==4.0.0
+dj-database-url==2.0.0
 Django==4.2.2
 django-environ==0.10.0
 hyperlink==21.0.0
