--- a/Lyceum/requirements.txt
+++ b/Lyceum/requirements.txt
@@ -4,6 +4,7 @@ attrs==23.1.0
 autobahn==23.1.2
 Automat==22.10.0
 backports.zoneinfo==0.2.1
+Brotli==1.0.9
 cffi==1.15.1
 channels==4.0.0
 channels-redis==4.1.0
@@ -29,4 +30,5 @@ sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.6.3
+whitenoise==6.5.0
 zope.interface==6.0
