--- a/Lyceum/requirements.txt
+++ b/Lyceum/requirements.txt
@@ -5,6 +5,7 @@ autobahn==23.1.2
 Automat==22.10.0
 backports.zoneinfo==0.2.1
 Brotli==1.0.9
+certifi==2023.7.22
 cffi==1.15.1
 channels==4.0.0
 channels-redis==4.1.0
@@ -13,7 +14,10 @@ cryptography==41.0.1
 daphne==4.0.0
 dj-database-url==2.0.0
 Django==4.2.2
+django-admin-honeypot-updated-2021==1.2.0
+django-debug-toolbar==4.1.0
 django-environ==0.10.0
+django-ipware==5.0.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -24,11 +28,13 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.2.0
 redis==4.6.0
+sentry-sdk==1.29.2
 service-identity==23.1.0
 six==1.16.0
 sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.6.3
+urllib3==2.0.4
 whitenoise==6.5.0
 zope.interface==6.0
