--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 autobahn==23.1.2
 Automat==22.10.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.15.1
