--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ async-timeout==4.0.2
 attrs==23.1.0
 autobahn==23.1.2
 Automat==22.10.0
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 Brotli==1.0.9
 certifi==2023.7.22
 cffi==1.15.1
 channels==4.0.0
 channels-redis==4.1.0
+charset-normalizer==3.3.2
 constantly==15.1.0
 cryptography==41.0.1
 daphne==4.0.0
@@ -28,6 +29,7 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.2.0
 redis==4.6.0
+requests==2.31.0
 sentry-sdk==1.29.2
 service-identity==23.1.0
 six==1.16.0
