--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-admin-honeypot-updated-2021==1.2.0
 django-debug-toolbar==4.1.0
 django-environ==0.10.0
 django-ipware==5.0.0
+djangorestframework==3.14.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -28,6 +29,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.2.0
+pytz==2023.3.post1
 redis==4.6.0
 requests==2.31.0
 sentry-sdk==1.29.2
